# logger

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_benchmark.sh
benchmarks/: CMakeLists.txt  README.md  benchmark.cpp  cpp_color_fix.h  run_benchmarks.py  run_benchmarks.sh  setup_project.sh  simple_config.yaml  test_config.yaml  test_config_simple.yaml
benchmarks/utils/: color_fix.py  output_processor.py
cmake/: MMLoggerConfig.cmake.in
doc/: Build_Install_README.md  Example_README.md  Logger_Integration_README.md  OptimizedGlogLogger_Design_README.md  OptimizedGlogLogger_Optimized_Configuration_README.md
examples/: CMakeLists.txt  advanced_example.cpp  complete_example.cpp  example.cpp  optimized_glog_example.cpp  run_examples.sh
include/: DisallowCopy.hpp  GlogLogger.hpp  ILogger.hpp  ILoggerFactory.hpp  Log.hpp  LogBaseDef.hpp  LoggerFactory.hpp  LoggerManager.hpp  LoggerStatus.hpp  OptimizedGlogLogger.hpp  StdoutLogger.hpp
src/: GlogLogger.cpp  Log.cpp  LoggerFactory.cpp  LoggerManager.cpp  OptimizedGlogLogger.cpp  StdoutLogger.cpp
